--- a/locket.conf
+++ b/locket.conf
@@ -1,19 +1,12 @@
-[General]
-bypass-system = true
-tun-excluded-routes = 192.168.0.0/16, 10.0.0.0/8
-skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 127.0.0.1
-dns-server = system
+#!name=Locket Gold
+#!desc=Premium
 
-[Rewrite]
-
-^https:\/\/api\.revenuecat\.com\/.+\/(receipts$|subscribers\/[^/]+$) url script-response-body unlock_vip_revenuecat.js
-^https:\/\/api\.revenuecat\.com\/.+\/(receipts|subscribers) url script-request-header delete_header.js
+[MITM]
+hostname = api.revenuecat.com
 
 [Script]
+Locket Gold = type=http-response, pattern=^https:\/\/api\.revenuecat\.com\/.+\/(receipts$|subscribers\/[^/]+$), requires-body=1, max-size=0, script-path=https://raw.githubusercontent.com/DungHoang120401/Nobita/refs/heads/Module/Locket.js, update-interval=5
 
-unlock_vip_revenuecat.js = type=http-response, pattern=^https:\/\/api\.revenuecat\.com\/.+\/(receipts$|subscribers\/[^/]+$), requires-body=true, max-size=-1, timeout=60, script-path=https://raw.githubusercontent.com/Sineskynee/locket-gold/refs/heads/main/unlock_vip_revenuecat.js
-
-
-delete_header.js = type=http-request, pattern=^https:\/\/api\.revenuecat\.com\/.+\/(receipts|subscribers), timeout=60, script-path=https://raw.githubusercontent.com/Sineskynee/locket-gold/refs/heads/main/delete_header.js
-[MITM]
-hostname = %APPEND% api.revenuecat.com, *.locketapp.com, api.locketapp.com
+[Header Rewrite]
+^https?://api.revenuecat.com/.+/(receipts$|subscribers/?(.*?)*$) = delete header X-RevenueCat-ETag
+^https?://api.revenuecat.com/.+/(receipts$|subscribers/?(.*?)*$) = delete header x-revenuecat-etag
